tests/typecheck/should_fail/T11112.hs
module T11112 where

sort :: Ord s -> [s] -> [s]
sort xs = xs
